# STM32_ESP32_OTA_UART_Dual-Bank_Bootloader

./: ARCHITECTURE_SPECIFICATION.md  Architecture_Specification.docx
ESP32/: CMakeLists.txt  sdkconfig.old
ESP32/Main/: CMakeLists.txt  main.c
STM32/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  STM32 Debug.launch  STM32F469NIHX_FLASH.ld  arm-none-eabi-gcc.cmake  cmake_install.cmake
STM32/Startup/: startup_stm32f469nihx.s
STM32/application/: CMakeLists.txt  cmake_install.cmake  linker_application.ld
STM32/application/src/: main.cpp  metadata.cpp  startup_stm32f469nihx.s
STM32/bootloader/: CMakeLists.txt  cmake_install.cmake  linker_bootloader.ld
STM32/bootloader/src/: main.cpp  startup_stm32f469nihx.s
STM32/common/: CMakeLists.txt  cmake_install.cmake
STM32/common/inc/: BareM_Def.h  firmware_header.hpp  memory_map.hpp  myConfig.h  timers.h  uart3.hpp
STM32/common/src/: myConfig.c  timers.c  uart3.cpp
WEB/: backend.php  default.php  firmware.json
